format the structure

--- a/html_email.html
+++ b/html_email.html
@@ -154,11 +154,8 @@
 					<tr>
 						<td class="twoColumn">
 
-<!--[if (gte mso 9)|(IE)]>
-        <table width="100%">
-        <tr>
-        <td width="50%" valign="top">
-        <![endif]-->
+						<!--[if (gte mso 9)|(IE)]><table width="100%"><tr><td width="50%" valign="top"><![endif]-->
+
 							<table class="col col-second" border="0" cellpadding="0" cellspacing="0" align="left" width="300" style="display:inline-block; text-align:left; vertical-align:top; width:50%; min-width:120px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(50%); width:calc(230400px - 48000%); min-width:calc(50%)">
 								<tr>
 									<td class="col-left-second-td" style="padding-left:30px; padding-right:30px; padding-top: 20px; padding-bottom: 20px; display: inline-block; vertical-align: center">
@@ -176,9 +173,8 @@
 								</tr>
 							</table>
 
-<!--[if (gte mso 9)|(IE)]>
-        </td><td width="50%" valign="top">
-        <![endif]-->
+							<!--[if (gte mso 9)|(IE)]></td><td width="50%" valign="top"><![endif]-->
+							
 							<table class="col col-second" border="0" cellpadding="0" cellspacing="0" align="center" style="display:inline-block; text-align:left; vertical-align:top; width:50%; min-width:120px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(50%); width:calc(230400px - 48000%); min-width:calc(50%)">
 								<tr>
 									<td class="col-right-second-td" align="center" style="padding-left:30px; padding-right:30px; padding-top: 20px; padding-bottom: 20px; vertical-align: middle">
@@ -187,11 +183,8 @@
 								</tr>
 							</table>
 
- <!--[if (gte mso 9)|(IE)]>
-        </td>
-        </tr>
-        </table>
-        <![endif]-->
+						<!--[if (gte mso 9)|(IE)]></td></tr></table><![endif]-->
+
 						</td>
 					</tr>
 				</table>
@@ -202,6 +195,8 @@
 					<tr>
 						<td>
 
+						<!--[if mso]><table><tr><td width="300"><![endif]-->
+
 							<table class="col" border="0" cellpadding="0" cellspacing="0" width="100%" align="center" style="max-width: 600px; border-collapse: collapse !important;">
 							   	<tr>
 							   		<td class="col-top-third-td" style="padding-left:30px; padding-right:30px; padding-top: 20px; padding-bottom: 10px">
@@ -210,9 +205,8 @@
 							   	</tr>
 							</table>
 
-							<!--[if mso]>
-	  						   </td><td>
-							   <![endif]-->
+							<!--[if mso]></td><td><![endif]-->
+
 							<table border="0" cellspacing="0" cellpadding="0" width="100%" align="center" style="table-layout: fixed">
 							   	<tr>
 							   		<td align="center" style="padding-top: 10px; padding-bottom: 10px">
@@ -221,9 +215,8 @@
 							   	</tr>
 							</table>
 
-							<!--[if mso]>
-	  						   </td><td>
-							   <![endif]-->
+							<!--[if mso]></td><td><![endif]-->
+
 							<table class="col" border="0" cellpadding="0" cellspacing="0" width="100%" align="center" style="max-width: 600px; border-collapse: collapse !important;">
 							   	<tr>
 							   		<td class="col-bottom-third-td" style="padding-left:30px; padding-right:30px; padding-top: 10px; padding-bottom: 20px">
@@ -306,6 +299,8 @@
 					</tr>
 				</table>
 
+				<!--[if mso]></td><td><![endif]-->
+
 				<table id="footer" bgcolor="#52575F" style="margin: auto">
 					<tr>
 						<td>
@@ -317,9 +312,9 @@
 							   		</td>
 							   	</tr>
 						    </table>
-						     <!--[if mso]>
-  						    </td><td>
-						    <![endif]-->
+
+						     <!--[if mso]></td><td><![endif]-->
+
 						    <table cellspacing="0" cellpadding="0" border="0" width="100%" id="sponsor-logo" align="center">
 							   	<tr>
 							   		<td align="center">
@@ -327,9 +322,9 @@
 							   		</td>
 							   	</tr>
 						    </table>
-						    <!--[if mso]>
-  						    </td><td>
-						    <![endif]-->
+
+						    <!--[if mso]></td><td><![endif]-->
+
 						    <table cellspacing="0" cellpadding="0" width="100%" id="copyright" align="center">
 							   	<tr>
 							   		<td align="center" style="font-size: 10px; color: #fff; padding-top: 10px; padding-bottom: 20px">
@@ -340,6 +335,8 @@
 						</td>
 					</tr>
 				</table>
+
+				<!--[if mso]><table><tr><td width="300"><![endif]-->
 
 			</td>
 		</tr>
