--- a/html_email.html
+++ b/html_email.html
@@ -133,6 +133,13 @@
 </head>
 
 <body yahoo leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="margin: 0; padding: 0">
+
+<!--[if mso]>
+<style type="text/css">
+body, table, td {font-family: Open Sans, Arial, Helvetica, sans-serif !important;}
+</style>
+<![endif]-->
+
 	<table border="0" cellpadding="0" cellspacing="0" width="100%" align="center" style="max-width: 600px; min-width: 260px; border-collapse: collapse !important; margin: 0 auto; ">
 		<tr>
 			<td>
